@@ -114,6 +114,12 @@ def path_curves_line_csv(data_dir):
 
 
 @pytest.fixture(scope="session")
+def path_multicurve_gml(data_dir):
+    """Path to ```multicurve.gml``"""
+    return os.path.join(data_dir, "multicurve.gml")
+
+
+@pytest.fixture(scope="session")
 def path_test_tin_shp(data_dir):
     """Path to ```test_tin.shp``"""
     return os.path.join(data_dir, "test_tin.shp")
